front end commit

--- a/templates/match.html
+++ b/templates/match.html
@@ -19,9 +19,23 @@
 </head>
 
 <body>
+  <div class="container ">
+    <div class="row justify-content-center">
+
+      <img src="images/footballgd.jpg" class="img-fluid football" alt="football">
+
+    </div>
+    <h3 class="text-center py-4">Do you like football?</h3>
+    <div class="icons text-center my-3">
+      <img src="images/heart.png" class="heart img-fluid px-2" alt="">
+      <img src="images/dislike.png" class="dislike img-fluid px-2" alt="">
+
+    </div>
+
+  </div>
 
 
-  <h3>Match To be done</h3>
+
 
 
   <!-- Optional JavaScript -->
