--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,23 @@
     </div>
     <img src="images/google.png" class="icon img-fluid" alt="icon">
   </div>
+  <div class="container ">
+    <div class="row justify-content-center">
+      <form>
+        <div class="form-group">
+          <label for="formGroupExampleInput">Email</label>
+          <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Google Email">
+        </div>
+        <div class="form-group">
+          <label for="formGroupExampleInput2">Password</label>
+          <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Password">
+        </div>
+        <a href="#" class="btn btn-success" type="button" value="Submit"><i class="fab fa-google px-2"> &nbsp; Sign in
+          </i></a>
+      </form>
+
+    </div>
+  </div>
 
 
 
@@ -45,6 +62,9 @@
   </script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+    < script src = "https://apis.google.com/js/platform.js"
+    async defer >
+  </script>
   </script>
 </body>
 
