changes to style.csss

--- a/templates/match.html
+++ b/templates/match.html
@@ -10,8 +10,8 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&family=Roboto:wght@500&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 
 
@@ -27,8 +27,8 @@
     </div>
     <h3 class="text-center py-4">Do you like football?</h3>
     <div class="icons text-center my-3">
-      <img src="images/heart.png" class="heart img-fluid px-2" alt="">
-      <img src="images/dislike.png" class="dislike img-fluid px-2" alt="">
+      <img src="images/greebheart.png" class="heart img-fluid px-2" alt="">
+      <img src="images/redislike.png" class="dislike img-fluid px-2" alt="">
 
     </div>
 
