--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,8 +10,8 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&family=Roboto:wght@500&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 
 
@@ -31,17 +31,19 @@
           <!-- SIDEBAR USER TITLE -->
           <div class="profile-usertitle">
             <div class="profile-usertitle-name">
-              Marcus Doe
+              <h3>Vasco Martins</h3>
             </div>
             <div class="profile-usertitle-job">
-              Developer
+              <h6>Developer</h6>
             </div>
+            <p>Say something about yourself</p>
+
           </div>
           <!-- END SIDEBAR USER TITLE -->
           <!-- SIDEBAR BUTTONS -->
           <div class="profile-userbuttons">
-            <button type="button" class="btn btn-success btn-sm">Follow</button>
-            <button type="button" class="btn btn-danger btn-sm">Message</button>
+            <a href="match.html" type="button" class="btn btn-success btn-sm">Match</a>
+            <a href="#" type="button" class="btn btn-danger btn-sm">Message</a>
           </div>
           <!-- END SIDEBAR BUTTONS -->
           <!-- SIDEBAR MENU -->
@@ -58,35 +60,41 @@
       </div>
       <div class="col-md-9 text-center">
         <div class="profile-content">
-          List of the Previous Matches
+          <p class="profileheading">List of the Previous Matches</p>
           <table class="table table-striped">
             <thead>
               <tr>
-                <th scope="col">#</th>
-                <th scope="col">First</th>
-                <th scope="col">Last</th>
+
+                <th scope="col">First Name</th>
+                <th scope="col">Last Name</th>
                 <th scope="col">Age</th>
+                <th scope="col">Conversation</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
+
+                <td>Sara</td>
+                <td>Santos</td>
+                <td>29</td>
+                <td><i class="fas fa-camera fa-2x"></i> &nbsp; <i class="far fa-comment-dots fa-2x inactive"></i></td>
               </tr>
               <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
+
+                <td>Jenniffer</td>
+                <td>Aniston</td>
+                <td>31</td>
+                <td><i class="fas fa-camera fa-2x inactive"></i> &nbsp; <i class="far fa-comment-dots fa-2x"></i></td>
               </tr>
               <tr>
-                <th scope="row">3</th>
-                <td>Larry</td>
-                <td>the Bird</td>
-                <td>@twitter</td>
+
+                <td>Angelina</td>
+                <td>Jolie</td>
+                <td>45</td>
+                <td><i class="fas fa-camera fa-2x"></i> &nbsp; <i class="far fa-comment-dots fa-2x"></i></td>
               </tr>
+
+
             </tbody>
           </table>
           <ul>
