--- a/templates/styles.css
+++ b/templates/styles.css
@@ -1,34 +1,39 @@
 body {
-  background: rgb(225, 211, 182);
+  background: rgb(255, 170, 165, 0.3);
   padding-top: 8%;
-  font-family: 'Roboto', sans-serif;
   font-size: 16px;
+  color: #000000;
+
 
 }
 
-
-.jumbotron {
-  color: #fff;
-  font-family: 'Roboto Condensed', sans-serif;
+p,
+h3 {
+  font-family: 'Oswald',
+    sans-serif;
 }
+
 
 .login {
   font-size: 1.8em;
 }
 
 .icon {
-  width: 10%;
+  width: 7%;
   text-shadow: -1px 14px 6px rgba(150, 150, 150, 1);
 }
 
 .football {
-  width: 30%;
+  width: 20%;
 }
 
-.heart,
+.heart {
+  width: 8%;
+}
+
 .dislike {
 
-  width: 10%;
+  width: 7%;
 }
 
 /* Profile css */
@@ -134,4 +139,78 @@ body {
   padding: 20px;
   background: #fff;
   min-height: 460px;
+}
+
+.main-heading {
+  font-family: 'Kaushan Script',
+    cursive;
+}
+
+th,
+tr {
+  font-family: 'Oswald',
+    sans-serif;
+}
+
+.profileheading {
+  font-size: 22px;
+}
+
+
+.inactive {
+  opacity: 0.3;
+}
+
+.reduceSpace {
+  margin-top: -90px;
+}
+
+@media only screen and (max-width: 600px) {
+
+
+  body {
+    padding: 0 15px;
+  }
+
+  .icon {
+    width: 9%;
+    text-shadow: -1px 14px 6px rgba(150, 150, 150, 1);
+  }
+
+  .reduceSpace {
+    margin-top: -20px;
+  }
+
+  .football {
+    width: 30%;
+  }
+
+  .heart {
+
+    width: 17%;
+  }
+
+  .dislike {
+
+    width: 16%;
+  }
+
+}
+
+@media screen and (min-width: 600px)and (max-width:930px) {
+
+  .football {
+    width: 40%;
+  }
+
+  .heart {
+
+    width: 17%;
+  }
+
+  .dislike {
+
+    width: 16%;
+  }
+
 }
