--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&family=Roboto:wght@500&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 
 
@@ -20,8 +20,9 @@
 
 <body>
   <div class="jumbotron jumbotron-fluid bg-transparent text-center">
-    <div class="container">
-      <h1 class="display-4">APPLE PIE DATING</h1>
+    <div class="container reduceSpace">
+      <img src="images/log_03.png" class="img-fluid py-4" alt="logo">
+      <h1 class="display-4 main-heading">APPLE PIE DATING</h1>
       <p class="lead  my-4">We will make your love life interesting in every scenario.</p>
     </div>
     <div class="row justify-content-center">
@@ -31,7 +32,8 @@
     </div>
     <img src="images/google.png" class="icon img-fluid" alt="icon">
   </div>
-  <div class="container ">
+
+  <div class="container reduceSpace">
     <div class="row justify-content-center">
       <form>
         <div class="form-group">
@@ -42,7 +44,8 @@
           <label for="formGroupExampleInput2">Password</label>
           <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Password">
         </div>
-        <a href="#" class="btn btn-success" type="button" value="Submit"><i class="fab fa-google px-2"> &nbsp; Sign in
+        <a href="#" class="btn btn-success my-3" type="button" value="Submit"><i class="fab fa-google px-2"> &nbsp; Sign
+            in
           </i></a>
       </form>
 
