Profile page managed

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -44,6 +44,10 @@
           <div class="profile-userbuttons">
             <a href="match.html" type="button" class="btn btn-success btn-sm">Match</a>
             <a href="#" type="button" class="btn btn-danger btn-sm">Message</a>
+            <div class="text-center">
+              <a href="index.html" type="button" class="btn btn-link d-block py-3 ">LogOut</a>
+            </div>
+
           </div>
           <!-- END SIDEBAR BUTTONS -->
           <!-- SIDEBAR MENU -->
@@ -58,7 +62,9 @@
           <!-- END MENU -->
         </div>
       </div>
+
       <div class="col-md-9 text-center">
+
         <div class="profile-content">
           <p class="profileheading">List of the Previous Matches</p>
           <table class="table table-striped">
@@ -68,7 +74,7 @@
                 <th scope="col">First Name</th>
                 <th scope="col">Last Name</th>
                 <th scope="col">Age</th>
-                <th scope="col">Conversation</th>
+                <th scope="col">Message/Photo/Call/Video</th>
               </tr>
             </thead>
             <tbody>
@@ -77,21 +83,28 @@
                 <td>Sara</td>
                 <td>Santos</td>
                 <td>29</td>
-                <td><i class="fas fa-camera fa-2x"></i> &nbsp; <i class="far fa-comment-dots fa-2x inactive"></i></td>
+                <td><i class="fas fa-comment-dots fa-2x inactive"></i> &nbsp; <i class="far fa-image fa-2x"></i> &nbsp;
+                  <i class="fas fa-phone-volume fa-2x"></i> &nbsp;
+                  <i class=" fas fa-video fa-2x"> </i>
+                </td>
               </tr>
               <tr>
 
                 <td>Jenniffer</td>
                 <td>Aniston</td>
                 <td>31</td>
-                <td><i class="fas fa-camera fa-2x inactive"></i> &nbsp; <i class="far fa-comment-dots fa-2x"></i></td>
+                <td><i class="fas fa-comment-dots fa-2x inactive"></i> &nbsp; <i class="far fa-image fa-2x"></i> &nbsp;
+                  <i class="fas fa-phone-volume fa-2x"></i> &nbsp;
+                  <i class="fas fa-video fa-2x inactive"></i>
+                </td>
               </tr>
               <tr>
 
                 <td>Angelina</td>
                 <td>Jolie</td>
                 <td>45</td>
-                <td><i class="fas fa-camera fa-2x"></i> &nbsp; <i class="far fa-comment-dots fa-2x"></i></td>
+                <td> <i class="fas fa-comment-dots fa-2x"></i> &nbsp; <i class="far fa-image fa-2x"></i> <i
+                    class="fas fa-phone-volume fa-2x inactive"></i> &nbsp; <i class="fas fa-video fa-2x"></i> </td>
               </tr>
 
 
