Javascript matches implementation

--- a/templates/match.html
+++ b/templates/match.html
@@ -22,10 +22,10 @@
   <div class="container ">
     <div class="row justify-content-center">
 
-      <img src="images/footballgd.jpg" class="img-fluid football" alt="football">
+      <img id="myImg" src="images/footballgd.jpg" class="img-fluid football" alt="football">
 
     </div>
-    <h3 class="text-center py-4">Do you like football?</h3>
+    <h3 class="text-center py-4" id="question">Do you like football?</h3>
     <div class="icons text-center my-3">
       <img src="images/greebheart.png" class="heart img-fluid px-2" alt="">
       <img src="images/redislike.png" class="dislike img-fluid px-2" alt="">
@@ -49,6 +49,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
   </script>
+  <script src="app.js"></script>
 </body>
 
 </html>
