real questions calculating match

--- a/templates/match.html
+++ b/templates/match.html
@@ -16,6 +16,11 @@
 
 
   <title>APPLE PIE DATING</title>
+
+  <script
+  src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js">
+</script>
+<script src="app.js"></script>
 </head>
 
 <body>
