--- a/templates/index.html
+++ b/templates/index.html
@@ -16,10 +16,9 @@
 
 
   <title>APPLE PIE DATING</title>
-  <script
-  src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js">
-</script>
-<script src="app.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js">
+  </script>
+  <script src="app.js"></script>
 </head>
 
 <body>
@@ -47,7 +46,7 @@
           <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Name">
         </div>
 
-        <button type="button" class="loginbtn btn-success  btn-lg">Start</button>
+        <a href="profile.html"><button type="button" class="loginbtn btn-success  btn-lg">Start</button></a>
       </form>
 
     </div>
