--- a/templates/message.html
+++ b/templates/message.html
@@ -20,50 +20,9 @@
 
 <body>
   <div class="container">
-    <div class="row profile">
-      <div class="col-md-3">
-        <div class="profile-sidebar">
-          <!-- SIDEBAR USERPIC -->
-          <div class="profile-userpic text-center">
-            <img src="images/vasco.jpg" class="img-responsive" alt="">
-          </div>
-          <!-- END SIDEBAR USERPIC -->
-          <!-- SIDEBAR USER TITLE -->
-          <div class="profile-usertitle">
-            <div class="profile-usertitle-name">
-              <h3>Vasco Martins</h3>
-            </div>
-            <div class="profile-usertitle-job">
-              <h6>Developer</h6>
-            </div>
-            <p>Say something about yourself</p>
+    <div class="row message">
 
-          </div>
-          <!-- END SIDEBAR USER TITLE -->
-          <!-- SIDEBAR BUTTONS -->
-          <div class="profile-userbuttons">
-            <a href="match.html" type="button" class="btn btn-success btn-sm">Match</a>
-            <a href="message.html" type="button" class="btn btn-danger btn-sm">Message</a>
-            <div class="text-center">
-              <a href="index.html" type="button" class="btn btn-link d-block py-3 ">LogOut</a>
-            </div>
-
-          </div>
-          <!-- END SIDEBAR BUTTONS -->
-          <!-- SIDEBAR MENU -->
-          <div class="profile-usermenu">
-            <ul class="nav">
-              <li class="">
-
-
-              </li>
-            </ul>
-          </div>
-          <!-- END MENU -->
-        </div>
-      </div>
-
-      <div class="col-md-9 text-center">
+      <div class="col text-center">
 
         <div class="profile-content">
           <p class="profileheading">List of the Previous Matches</p>
